--- a/reportReferences.bib
+++ b/reportReferences.bib
@@ -10,7 +10,7 @@
    xxx = "yyy"
    }  
 
-%%%%% Report References %%%%%
+%%%%% Report References %%%%%http://www.blabbermouth.net/news.aspx?mode=Article&newsitemID=124671
 
 
 @ARTICLE{modin,
@@ -47,3 +47,7 @@
 @ARTICLE{cthru,
    url = "http://www.c-thru-music.com/cgi/?page=spec-64"
    }
+
+@ARTICLE{randomalg,
+	url = "http://www.blabbermouth.net/news.aspx?mode=Article&newsitemID=124671"
+	}
