--- a/report.tex
+++ b/report.tex
@@ -109,8 +109,9 @@ In musical theory, an interval is the distance between two notes or pitches, the
 \item Notes ascend by an interval of a major third on one diagonal axis (north easterly).
 \item Notes ascend by an interval of a minor third on the other diagonal axis (north westerly).
 \end{itemize}
-This layout clusters complementary notes together, for example, all the notes in the C Major chord, namely C, E and G are adjoining. Scales are played by using simple, repeated patterns that can be transposed for playing in different keys. In this way, music can be easily and quickly created.\\
-\begin{center}
+This layout clusters complementary notes together, for example, all the notes in the C Major chord, namely C, E and G are adjoining. Scales are played by using simple, repeated patterns that can be transposed for playing in different keys. \\
+\\
+Transposition, \textit{the shifting of a melody, a harmonic progression or entire musical piece to another key, while maintaining the same tone structure} \cite{koch}, 
 \includegraphics[scale=0.7]{scale.png}
 \includegraphics[scale=1.5]{scale2.jpg}
 \end{center}
