--- a/reportReferences.bib
+++ b/reportReferences.bib
@@ -89,3 +89,9 @@
 @ARTICLE{gdmath,
 	url = "http://www.gdreflections.com/2011/02/hexagonal-grid-math.html"
 	}
+	
+@BOOK{koch,
+	author = "Heinrich Christoph Koch",
+	title = "Musikalisches Lexicon",
+	year = 1865
+	}
