--- a/reportReferences.bib
+++ b/reportReferences.bib
@@ -10,8 +10,7 @@
    xxx = "yyy"
    }  
 
-%%%%% Report References %%%%%http://www.blabbermouth.net/news.aspx?mode=Article&newsitemID=124671
-
+%%%%% Report References %%%%%
 
 @ARTICLE{modin,
    author = "Martin Kaltenbrunner",
@@ -47,11 +46,10 @@
 @ARTICLE{cthru,
    url = "http://www.c-thru-music.com/cgi/?page=spec-64"
    }
-<<<<<<< HEAD
 
 @ARTICLE{randomalg,
-	url = "http://www.blabbermouth.net/news.aspx?mode=Article&newsitemID=124671"
-=======
+	url = "http://www.blabbermouth.net/news.aspx?mode=ArticlenewsitemID=124671"
+	}
    
 @ARTICLE{kb,
    url = "http://www.kanbanflow.com"
@@ -86,6 +84,10 @@
 	url = "http://www-cs-students.stanford.edu/~amitp/game-programming/grids/"
 	}
 	
+@ARTICLE{midinope,
+	url = "http://blog.umito.nl/2010/05/07/midi-on-android.html"
+	}
+	
 @ARTICLE{gdmath,
 	url = "http://www.gdreflections.com/2011/02/hexagonal-grid-math.html"
 	}
@@ -94,4 +96,17 @@
 	author = "Heinrich Christoph Koch",
 	title = "Musikalisches Lexicon",
 	year = 1865
+	}
+	
+@ARTICLE{swift,
+	author = "A. Swift",
+	title = "An Introduction to MIDI",
+	year = 1997,
+	url = "http://www.doc.ic.ac.uk/~nd/surprise_97/journal/vol1/aps2/"
+	}
+	
+@ARTICLE{stein,
+	author = "C. Stein",
+	title = "Introduction to Algorithms",
+	year = 2001
 	}
